# www_starbug_com

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
holly/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
holly/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
holly/src/assets/images/Astronomy/MLC404/: index.ts
holly/src/assets/images/Astronomy/Observatories/: index.ts
holly/src/assets/images/Kayaking/: index.ts
holly/src/assets/logos/: index.ts
holly/src/components/: Astronomy.test.tsx  Astronomy.tsx  Home.test.tsx  Home.tsx  Kayaking.test.tsx  Kayaking.tsx  Layout.tsx  Observatories.test.tsx  Observatories.tsx  Resume.test.tsx  Resume.tsx  Sidebar.tsx  sidebarLinkData.ts  useLocalStorage.ts  useWindowSize.ts
home/: Dockerfile  main.py  pyproject.toml
home/app/: __init__.py
home/src/www_starbug_com/: __init__.py  __main__.py
home/tests/: __init__.py  test_home.py
navigator/: Dockerfile  README.md  pyproject.toml
navigator/src/navicomp/: __init__.py
navigator/src/www_starbug_com/: __init__.py
navigator/tests/: __init__.py  test_navicomp.py  test_navigator.py
nginx/: Dockerfile  README.md
nginx/conf.d/: default.conf
