[tool.poetry]
name = "www"
version = "0.1.0"
description = "This is the source for the starbug.com web site"
authors = ["Lincoln McFarland <lrm@starbug.com>"]
packages = [{include = "www", from = "src"}]

[tool.poetry.dependencies]
flask = "^3.1.3"
gunicorn = "^26.0.0"
numpy = "^2.5.1"
python = "^3.14"
scipy = "^1.18.0"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3" # Allows Flake8 to read pyproject.toml
isort = "^5.12.0"
pytest = "^8.0.0"
pytest-flask = "^1.3.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
line_length = 88
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", ".venv", "dist"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
